trading-core/errors.txt
cargo :     Checking 
trading-core v0.1.0 
(E:\MBCT\trading-core)
In Zeile:1 Zeichen:1
+ cargo check --bin 
trader 2>&1 | 
Out-File -FilePath 
errors.txt -Encodi ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng tr...T\trading    
-core):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0308]: 
mismatched types
   --> trading-core\sr
c\bin\trader\main.rs:2
28:34
    |
228 |         c_listen
.stream_provider(symbo
ls).await;
    |                 
 --------------- 
^^^^^^^ expected `Rece
iver<Vec<String>>`, 
found `Vec<String>`
    |                 
 |
    |                 
 arguments to this 
method are incorrect
    |
    = note: expected 
struct `tokio::sync::m
psc::Receiver<Vec<_>>`
               found 
struct `Vec<_>`
note: method defined 
here
   --> trading-core\sr
c\bin\trader\modules\c
ollector.rs:39:18
    |
39  |     pub async 
fn stream_provider(
    |                 
 ^^^^^^^^^^^^^^^
40  |         self: 
Arc<Self>,
41  |         mut rx: 
mpsc::Receiver<Vec<Str
ing>>,
    |         --------
----------------------
-----

For more information 
about this error, try 
`rustc --explain 
E0308`.
error: could not 
compile 
`trading-core` (bin 
"trader") due to 1 
previous error
